# BMW_Multi-Agent_Framework

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bmw_agents/: README.md  requirements.txt
bmw_agents/configs/prompt_templates/: ollama_plan_react.txt  ollama_react.txt  plan_react.txt  react.txt
bmw_agents/core/: task.py
bmw_agents/core/memory/: episodic_memory.py  short_memory.py
bmw_agents/core/prompt_strategies/: base.py  non_iterative.py  ollama_plan_react.py  ollama_react.py  ollama_single_response_plan_react.py  ollama_single_response_react.py  ollama_traced_plan_react.py  ollama_traced_react.py  plan_react.py  react.py  single_response_traced_plan_react.py  single_response_traced_react.py  traced_plan_react.py  traced_react.py
bmw_agents/core/toolbox/: __init__.py  tool.py  toolbox.py  toolbox_refiner.py
bmw_agents/core/toolbox/tools/: __init__.py  basic_tools.py  file_tools.py  registry.py
bmw_agents/utils/: llm_providers.py  logger.py
examples/: OLLAMA_INTEGRATION.md  README.md  csv_test.py  debug_output.txt  improved_ollama_plan_react_example.py  improved_ollama_react_example.py  improved_ollama_traced_plan_react_example.py  improved_ollama_traced_react_example.py  ollama_react_example.py  ollama_single_response_example.py  ollama_single_response_plan_react_example.py  ollama_test.py  simple_react_example.py
